This file records noteworthy changes.  (Public domain.)

2020 (for TeX Live 2020, 27 March 2020)
* \input now also accepts a group-delimited filename, e.g.,
\input{foo.tex}. The usage with a standard space/token-delimited
filename is completely unchanged.

The group-delimited name was previously implemented in LuaTeX; now it is
available in all engines. ASCII double quote characters (") are removed
from the filename, but it is otherwise left unchanged after
tokenization. This does not currently impact LaTeX's \input command, as
that is a macro redefinition of the standard \input primitive.

* New cross-engine option -cnf-line=STR.

* All TeX engines except tex and etex now compress (with zlib) .fmt files
  (XeTeX and LuaTeX already did so).

pTeX (and all variants): new primitives \ifjfont and \iftfont.
eptex, euptex: new primitives \Uchar, \Ucharcat, \current(x)spacingmode,
  \ifincsname; revise \fontchar?? and \iffontchar.
euptex only: new primitive  \currentcjktoken.

BibTeX: now reallocates on large (>20k) field values instead of aborting.


2019 (for TeX Live 2019,  7 April 2019)
BibTeX: subsidiary .aux files are looked for in the directory of the
main .aux file, if not found as-is (to work better with -output-directory).

CWEB: now comes from the CWEBbin package
(https://github.com/ascherer/cwebbin), with translation capabilities,
more language support, and more.


2018 (for TeX Live 2018, 14 April 2018)
* Directories in the -output-directory do not mask files by the same name.

2017 (for TeX Live 2017, 19 May 2017)
2016 (for TeX Live 2016, 21 May 2016)
2015 (for TeX Live 2015, 21 May 2015)
2014 (for TeX Live 2014, 24 May 2014)
2013 (for TeX Live 2013, 30 May 2013)
* Doc changes and bug fixes.

2012 (for TeX Live 2012, 1 July 2012)
* upTeX and e-upTeX Japanese engines added.

2011 (for TeX Live 2011, 5 July 2011)
* epTeX Japanese engine added.

2010 (for TeX Live 2010, 4 June 2010)
* BibTeX line-breaking bug fix in bibtex.web.
* pTeX Japanese engine added.