@@ -20,7 +20,7 @@
 	call in unusual interactive sequences can mess up
 	the selector value, ultimately causing a segmentation fault
 	from writing to a closed stream \write15. Fix primarily
-	from David Fuchs.
+	from David Fuchs. Original report from Xiao Zhang,
 	https://tex.stackexchange.com/questions/551313/
 	https://tug.org/pipermail/tex-live/2020-June/045876.html
 
